Adds helpful comment on Symbols constructor.

--- a/jupyter_notebooks/sympy_lab.ipynb
+++ b/jupyter_notebooks/sympy_lab.ipynb
@@ -21,12 +21,11 @@
     "v, c = symbols('v c')\n",
     "t, T = symbols('t T')\n",
     "x = symbols('x')\n",
+    "# NB: One can produce upper or lower case greek letters simply by capitalizing the argument being passed to the Symbol constructor.\n",
     "delta = Symbol(\"\\Delta\")\n",
     "gamma = Symbol(\"\\gamma\")\n",
     "time_dilation = Eq(delta*t, delta*T*gamma)\n",
-    "time_dilation\n",
-    "test = Eq(delta*x, 0)\n",
-    "test"
+    "time_dilation"
    ]
   },
   {
