Resets output before merge to master

--- a/jupyter_notebooks/sympy_lab.ipynb
+++ b/jupyter_notebooks/sympy_lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\Delta t = T \\Delta \\gamma$"
+      ],
+      "text/plain": [
+       "Eq(\\Delta*t, T*\\Delta*\\gamma)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v, c = symbols('v c')\n",
     "t, T = symbols('t T')\n",
@@ -30,9 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{1}{\\sqrt{1 - \\frac{v^{2}}{c^{2}}}}$"
+      ],
+      "text/plain": [
+       "1/sqrt(1 - v**2/c**2)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is the equation for the gamma factor.\n",
     "gamma_factor = 1/sqrt(1 - (v**2/c**2))\n",
@@ -42,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,47 +83,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 1.00002225374394$"
+      ],
+      "text/plain": [
+       "1.00002225374394"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Evaluate our expression at the point where relativistic velocity equals the value set in the cell above.\n",
     "gamma = gamma_factor.evalf(subs={v: relativistic_velocity, c: light_speed})\n",
     "gamma"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "from matplotlib.animation import FuncAnimation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loop_value = 100000\n",
-    "starting_value = 289792458\n",
-    "while starting_value < light_speed:\n",
-    "    print(starting_value)\n",
-    "    print(gamma_factor.evalf(subs={v: starting_value, c: light_speed}))\n",
-    "    starting_value += loop_value\n",
-    "    print(\"velocity: {}\".format(starting_value))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
