--- a/jupyter_notebooks/sympy_lab.ipynb
+++ b/jupyter_notebooks/sympy_lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\Delta t = T \\Delta \\gamma$"
-      ],
-      "text/plain": [
-       "Eq(\\Delta*t, T*\\Delta*\\gamma)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "v, c = symbols('v c')\n",
     "t, T = symbols('t T')\n",
@@ -44,33 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{1}{\\sqrt{1 - \\frac{v^{2}}{c^{2}}}}$"
-      ],
-      "text/plain": [
-       "1/sqrt(1 - v**2/c**2)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is the equation for the gamma factor.\n",
-    "gamma_factor = 1/sqrt(1 - (v**2/c**2))\n",
+    "gamma_factor_equation = 1/sqrt(1 - (v**2/c**2))\n",
     "\n",
-    "gamma_factor"
+    "gamma_factor_equation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,26 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 1.00002225374394$"
-      ],
-      "text/plain": [
-       "1.00002225374394"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Evaluate our expression at the point where relativistic velocity equals the value set in the cell above.\n",
-    "gamma = gamma_factor.evalf(subs={v: relativistic_velocity, c: light_speed})\n",
+    "gamma = gamma_factor_equation.evalf(subs={v: relativistic_velocity, c: light_speed})\n",
     "gamma"
    ]
   }
