--- a/jupyter_notebooks/sympy_lab.ipynb
+++ b/jupyter_notebooks/sympy_lab.ipynb
@@ -63,6 +63,39 @@
     "gamma = gamma_factor_equation.evalf(subs={v: relativistic_velocity, c: light_speed})\n",
     "gamma"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "from matplotlib.animation import FuncAnimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loop_value = 100000\n",
+    "starting_value = 289792458\n",
+    "while starting_value < light_speed:\n",
+    "    print(starting_value)\n",
+    "    print(gamma_factor.evalf(subs={v: starting_value, c: light_speed}))\n",
+    "    starting_value += loop_value\n",
+    "    print(\"velocity: {}\".format(starting_value))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
