Adds linear algebra lab and fibonacci generator matrix

--- a/jupyter_notebooks/coding_exercises.ipynb
+++ b/jupyter_notebooks/coding_exercises.ipynb
@@ -277,8 +277,15 @@
     "        list_from_int.append_to_list(temp)\n",
     "        integer_to_listify //= TEN\n",
     "    \n",
-    "    return list_from_int\n",
-    "\n",
+    "    return list_from_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "list_one_integer = render_list_to_int(list_one)\n",
     "list_one_flipped_int = reverse_integer(list_one_integer)\n",
     "\n",
@@ -295,7 +302,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "MAX_NUM_ELEMENTS = 4\n",
+    "\n",
+    "# Based on the way that the random generator works, this number ensures we iterate enough times to get the full unique set.\n",
+    "# Anything less, and we run the risk of not collecting them all.\n",
+    "MAX_NUM_ITERATIONS = 7500\n",
+    "\n",
+    "\n",
+    "MEMBERS = [1, 0, -1, 0, -2, 2]\n",
+    "TARGET_VALUE = 0\n",
+    "\n",
+    "\n",
+    "def generate_test_set():\n",
+    "    test_set = []\n",
+    "    for i in range(0, MAX_NUM_ELEMENTS):\n",
+    "        test_set.append(random.choice(MEMBERS))\n",
+    "    return test_set\n",
+    "\n",
+    "def evaluate_set(set_to_eval):\n",
+    "    total = 0\n",
+    "#     print(set_to_eval)\n",
+    "    for i in range(0, len(set_to_eval)):\n",
+    "        total += set_to_eval[i]\n",
+    "    return total\n",
+    "\n",
+    "def generate_solution_sets():\n",
+    "    solution_set = []\n",
+    "    for i in range(0, MAX_NUM_ITERATIONS):\n",
+    "        this_set = generate_test_set()\n",
+    "#         print(f\"Set selected: {this_set}\")\n",
+    "        \n",
+    "        this_total = evaluate_set(this_set)\n",
+    "#         print(f\"total: {this_total}\")\n",
+    "        \n",
+    "        if this_total == TARGET_VALUE:\n",
+    "            if this_set in solution_set:\n",
+    "                pass\n",
+    "#                 print(\"Already logged this solution. Continuing...\")\n",
+    "            else:\n",
+    "                solution_set.append(this_set)\n",
+    "    return solution_set\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "this_test_set = generate_test_set()\n",
+    "this_total = evaluate_set(this_test_set)\n",
+    "this_total\n",
+    "\n",
+    "\n",
+    "solution_sets_test = generate_solution_sets()\n",
+    "print(solution_sets_test)\n",
+    "length = len(solution_sets_test)\n",
+    "print(f\"Total sets recorded: {length}\")"
+   ]
   },
   {
    "cell_type": "code",
