--- a/jupyter_notebooks/linear_algebra.ipynb
+++ b/jupyter_notebooks/linear_algebra.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy\n",
-    "from numpy.linalg import matrix_power"
+    "from numpy.linalg import matrix_power\n",
+    "from numpy.linalg import eigvals"
    ]
   },
   {
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +59,35 @@
     "# f_7 = 13\n",
     "# f_7 - 1 = 8\n",
     "\n",
-    "matrix_power(m, 7)"
+    "new_matrix = matrix_power(m, 7)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([29.03444185, -0.03444185])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigvals(new_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
