Adds iterative list reversal

--- a/jupyter_notebooks/coding_exercises.ipynb
+++ b/jupyter_notebooks/coding_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "233168"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for i in range(0, THRESHOLD):\n",
     "    if i % 3 == 0:\n",
@@ -28,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +58,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "two_sum(members, target)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,16 +128,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mismatch.\n",
+      "New divisor: 2\n",
+      "-50\n"
+     ]
+    }
+   ],
    "source": [
     "print(perform_division(DIVIDEND, DIVISOR, MAX_ITERATIONS))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,11 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "12\n",
+      "121\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "TEST_INT = 122\n",
+    "TEST_INT = 121\n",
     "reverse_integer(TEST_INT)"
    ]
   },
@@ -189,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,45 +257,57 @@
     "class ListNode:\n",
     "    def __init__(self, node_value=None):\n",
     "        self.node_value = node_value\n",
-    "        self.next_value = None\n",
+    "        self.next_node = None\n",
+    "    \n",
+    "    def get_value(self):\n",
+    "        if self.node_value:\n",
+    "            return self.node_value\n",
+    "        else:\n",
+    "            return None\n",
+    "    \n",
+    "    def set_value(self, value):\n",
+    "        self.node_value = value\n",
+    "    \n",
+    "    \n",
     "        \n",
     "class SingleLinkedList:\n",
     "    def __init__(self):\n",
-    "        self.head_value = None\n",
+    "        self.head_node = None\n",
     "    \n",
     "    def append_to_list(self, value):\n",
-    "        current = self.head_value\n",
+    "        current = self.head_node\n",
     "        if current:\n",
-    "            while current.next_value != None:\n",
-    "                current = current.next_value\n",
-    "            current.next_value = ListNode(value)\n",
+    "            while current.next_node != None:\n",
+    "                current = current.next_node\n",
+    "            current.next_node = ListNode(value)\n",
     "        else:\n",
-    "            self.head_value = ListNode(value)\n",
+    "            self.head_node = ListNode(value)\n",
     "    \n",
     "    def print_list(self):\n",
-    "        val_to_print = self.head_value\n",
+    "        val_to_print = self.head_node\n",
     "        while val_to_print is not None:\n",
     "            print(val_to_print.node_value)\n",
-    "            val_to_print = val_to_print.next_value\n",
+    "            val_to_print = val_to_print.next_node\n",
+    "        \n",
     "\n",
     "\n",
     "list_one = SingleLinkedList()\n",
-    "list_one.head_value = ListNode(2)\n",
+    "list_one.head_node = ListNode(2)\n",
     "l1_n2 = ListNode(4)\n",
     "l1_n3 = ListNode(3)\n",
     "\n",
     "# Link to nodes:\n",
-    "list_one.head_value.next_value = l1_n2\n",
-    "l1_n2.next_value = l1_n3\n",
+    "list_one.head_node.next_node = l1_n2\n",
+    "l1_n2.next_node = l1_n3\n",
     "\n",
     "list_two = SingleLinkedList()\n",
-    "list_two.head_value = ListNode(5)\n",
+    "list_two.head_node = ListNode(5)\n",
     "l2_n2 = ListNode(6)\n",
     "l2_n3 = ListNode(4)\n",
     "\n",
     "# Link the nodes:\n",
-    "list_two.head_value.next_value = l2_n2\n",
-    "l2_n2.next_value = l2_n3\n",
+    "list_two.head_node.next_node = l2_n2\n",
+    "l2_n2.next_node = l2_n3\n",
     "\n",
     "# This is defined in a cell above, but no reason to rewrite the code, or have to be dependent on that cell.\n",
     "# This is jupyter land, after all. Plus, the return value for this method is different than its contemporary above.\n",
@@ -261,11 +332,11 @@
     "    return new_int\n",
     "\n",
     "def render_list_to_int(linked_list):\n",
-    "    current_value = linked_list.head_value\n",
+    "    current_node = linked_list.head_node\n",
     "    integer_to_return = 0\n",
-    "    while current_value is not None:\n",
-    "        integer_to_return = (integer_to_return * TEN) + current_value.node_value\n",
-    "        current_value = current_value.next_value\n",
+    "    while current_node is not None:\n",
+    "        integer_to_return = (integer_to_return * TEN) + current_node.node_value\n",
+    "        current_node = current_node.next_node\n",
     "    return integer_to_return\n",
     "\n",
     "\n",
@@ -282,9 +353,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "0\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "list_one_integer = render_list_to_int(list_one)\n",
     "list_one_flipped_int = reverse_integer(list_one_integer)\n",
@@ -299,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,9 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total sets recorded: 85\n"
+     ]
+    }
+   ],
    "source": [
     "this_test_set = generate_test_set()\n",
     "this_total = evaluate_set(this_test_set)\n",
@@ -360,9 +449,91 @@
     "\n",
     "\n",
     "solution_sets_test = generate_solution_sets()\n",
-    "print(solution_sets_test)\n",
+    "# print(solution_sets_test)\n",
     "length = len(solution_sets_test)\n",
     "print(f\"Total sets recorded: {length}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "8\n",
+      "2\n",
+      "0\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_to_be_reversed = SingleLinkedList()\n",
+    "node_zero = ListNode(10)\n",
+    "node_one = ListNode(8)\n",
+    "node_two = ListNode(2)\n",
+    "node_three = ListNode(0)\n",
+    "node_four = ListNode(3)\n",
+    "\n",
+    "# Link the nodes in the list:\n",
+    "list_to_be_reversed.head_node = node_zero\n",
+    "list_to_be_reversed.head_node.next_node = node_one\n",
+    "node_one.next_node = node_two\n",
+    "node_two.next_node = node_three\n",
+    "node_three.next_node = node_four\n",
+    "list_to_be_reversed.print_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_iterative(list_to_reverse):\n",
+    "    current_node = list_to_reverse.head_node\n",
+    "    previous_node = None\n",
+    "    next_node = current_node.next_node\n",
+    "    \n",
+    "    while current_node:\n",
+    "        # Reverse the link:\n",
+    "        current_node.next_node = previous_node\n",
+    "        \n",
+    "        # Iterate to the next nodes in the list:\n",
+    "        previous_node = current_node\n",
+    "        current_node = next_node\n",
+    "        if next_node:\n",
+    "            next_node = next_node.next_node\n",
+    "    \n",
+    "    list_to_reverse.head_node = previous_node\n",
+    "    \n",
+    "    return list_to_reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "0\n",
+      "2\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_list = reverse_iterative(list_to_be_reversed)\n",
+    "new_list.print_list()"
    ]
   },
   {
