Adds recursive list reversal

--- a/jupyter_notebooks/coding_exercises.ipynb
+++ b/jupyter_notebooks/coding_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "233168"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0, THRESHOLD):\n",
     "    if i % 3 == 0:\n",
@@ -39,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,34 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "two_sum(members, target)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,26 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mismatch.\n",
-      "New divisor: 2\n",
-      "-50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(perform_division(DIVIDEND, DIVISOR, MAX_ITERATIONS))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,29 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "12\n",
-      "121\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "TEST_INT = 121\n",
     "reverse_integer(TEST_INT)"
@@ -248,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +229,16 @@
     "        while val_to_print is not None:\n",
     "            print(val_to_print.node_value)\n",
     "            val_to_print = val_to_print.next_node\n",
+    "    \n",
+    "    def reverse_recursive(self, node):\n",
+    "        if node.next_node == None:\n",
+    "            self.head_node = node\n",
+    "            return\n",
     "        \n",
+    "        self.reverse_recursive(node.next_node)\n",
+    "        temp = node.next_node\n",
+    "        temp.next_node = node\n",
+    "        node.next_node = None\n",
     "\n",
     "\n",
     "list_one = SingleLinkedList()\n",
@@ -353,19 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n",
-      "0\n",
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_one_integer = render_list_to_int(list_one)\n",
     "list_one_flipped_int = reverse_integer(list_one_integer)\n",
@@ -380,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,17 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total sets recorded: 85\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "this_test_set = generate_test_set()\n",
     "this_total = evaluate_set(this_test_set)\n",
@@ -456,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -468,6 +400,17 @@
       "2\n",
       "0\n",
       "3\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'print_list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-a8d058e9fbdc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mlist_to_be_reversed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mrecursive_reversed_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist_to_be_reversed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse_recursive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_to_be_reversed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead_node\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mrecursive_reversed_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'print_list'"
      ]
     }
    ],
@@ -485,12 +428,14 @@
     "node_one.next_node = node_two\n",
     "node_two.next_node = node_three\n",
     "node_three.next_node = node_four\n",
+    "list_to_be_reversed.print_list()\n",
+    "recursive_reversed_list = list_to_be_reversed.reverse_recursive(list_to_be_reversed.head_node)\n",
     "list_to_be_reversed.print_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,18 +461,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "0\n",
-      "2\n",
+      "10\n",
       "8\n",
-      "10\n"
+      "2\n",
+      "0\n",
+      "3\n"
      ]
     }
    ],
@@ -535,6 +480,13 @@
     "new_list = reverse_iterative(list_to_be_reversed)\n",
     "new_list.print_list()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
