Represents current state for unfair coinflip problem

--- a/jupyter_notebooks/coding_exercises.ipynb
+++ b/jupyter_notebooks/coding_exercises.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,32 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "8\n",
-      "2\n",
-      "0\n",
-      "3\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'print_list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-a8d058e9fbdc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mlist_to_be_reversed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mrecursive_reversed_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist_to_be_reversed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse_recursive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_to_be_reversed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead_node\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mrecursive_reversed_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'print_list'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_to_be_reversed = SingleLinkedList()\n",
     "node_zero = ListNode(10)\n",
@@ -435,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,21 +438,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "8\n",
-      "2\n",
-      "0\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_list = reverse_iterative(list_to_be_reversed)\n",
     "new_list.print_list()"
@@ -483,10 +448,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Von Neumann extractor\n",
+    "# Collapses the probability space of an unfair coinflip, wherein we apply this extractor to two successive\n",
+    "# flips of the unfair coin, and force it into a binary probability space.\n",
+    "def von_neumann_extractor(first_bit, second_bit):\n",
+    "    if first_bit != second_bit:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import random\n",
+    "# Disproportionately return false. Need to rethink how we generate the unfair coin flip.\n",
+    "def unfair_coin_flip():\n",
+    "    if random() <= 0.7:\n",
+    "        return 'H'\n",
+    "    else:\n",
+    "        return 'T'\n",
+    "\n",
+    "NUM_EXPERIMENTS = 10\n",
+    "for i in range(0, NUM_EXPERIMENTS):\n",
+    "    flip_zero = unfair_coin_flip()\n",
+    "    flip_one = unfair_coin_flip()\n",
+    "    print(von_neumann_extractor(flip_zero, flip_one))"
+   ]
   },
   {
    "cell_type": "code",
