Adds numpy lab and updates coding exercises

--- a/jupyter_notebooks/coding_exercises.ipynb
+++ b/jupyter_notebooks/coding_exercises.ipynb
@@ -6,6 +6,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Given a positive integer number n, your task is to calculate the difference between the product of its digits and the sum of its digits.\n",
+    "\n",
+    "# Note: The order matters; the answer should be of the form product - sum (and not sum - product).\n",
+    "\n",
+    "# Example\n",
+    "\n",
+    "#     For n = 123456, the output should be digitsManipulations(n) = 699.\n",
+    "#         The product of the digits is equal to 1 * 2 * 3 * 4 * 5 * 6 = 720.\n",
+    "#         The sum of the digits is equal to 1 + 2 + 3 + 4 + 5 + 6 = 21.\n",
+    "TEN = 10\n",
+    "N = 123456\n",
+    "def decompose_int(int_to_decompose):\n",
+    "    constituent_digits = []\n",
+    "    while int_to_decompose > 0:\n",
+    "        temp = int_to_decompose % TEN\n",
+    "        constituent_digits.append(temp)\n",
+    "        int_to_decompose //= TEN\n",
+    "    return constituent_digits\n",
+    "\n",
+    "def calculate_product_sum_diff(starting_int):\n",
+    "    constituent_members = decompose_int(starting_int)\n",
+    "    total_product = 1\n",
+    "    total_sum = 0\n",
+    "    for i in constituent_members:\n",
+    "        total_product *= i\n",
+    "        total_sum += i\n",
+    "    return total_product - total_sum\n",
+    "    \n",
+    "calculate_product_sum_diff(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given a string s, can you compose exactly k non-empty palindromes using all letters of s?\n",
+    "\n",
+    "# Note that you can use only letters from s. \n",
+    "# Each letter from s that you use has to appear the exact same number of times \n",
+    "# in your palindromes as it does in s. Also note that you can rearrange string letters as you want.\n",
+    "\n",
+    "# Example\n",
+    "\n",
+    "#     For s = \"abracadabra\" and k = 3, the output should be\n",
+    "#     composeKPalindromes(s, k) = true.\n",
+    "def "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "THRESHOLD = 1000\n",
     "total_sum = 0"
    ]
@@ -448,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,26 +520,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from random import random\n",
     "# Disproportionately return false. Need to rethink how we generate the unfair coin flip.\n",
