Adds updates to the numpy exercises

--- a/jupyter_notebooks/coding_exercises.ipynb
+++ b/jupyter_notebooks/coding_exercises.ipynb
@@ -544,6 +544,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Factoring large exponents\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "start_zero = time.time()\n",
+    "print(3**545)\n",
+    "end_zero = time.time()\n",
+    "print(end_zero - start_zero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1110\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_of_iterations = 0\n",
+    "for i in range(10):\n",
+    "    num_of_iterations += 1\n",
+    "    for j in range(10):\n",
+    "        num_of_iterations += 1\n",
+    "        for j in range(10):\n",
+    "            num_of_iterations +=1\n",
+    "\n",
+    "print(num_of_iterations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
