Saves current state for articles and papers

--- a/jupyter_notebooks/coding_exercises.ipynb
+++ b/jupyter_notebooks/coding_exercises.ipynb
@@ -557,35 +557,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1110\n"
-     ]
-    }
-   ],
-   "source": [
-    "num_of_iterations = 0\n",
-    "for i in range(10):\n",
-    "    num_of_iterations += 1\n",
-    "    for j in range(10):\n",
-    "        num_of_iterations += 1\n",
-    "        for j in range(10):\n",
-    "            num_of_iterations +=1\n",
-    "\n",
-    "print(num_of_iterations)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Implement a function that takes a 2D array of 0s and 1s and returns the number of islands in the array.\n",
+    "\n",
+    "An element is part of an island if its value is 1. Two adjacent elements are part of the same island if both of their values are 1. \n",
+    "Adjacency is left-right and up-down, but not diagonal.\n",
+    "\n",
+    "Examples:\n",
+    "\n",
+    "input = [[1, 0, 1],\n",
+    "         [0, 1, 0],\n",
+    "         [1, 0, 1]]\n",
+    "         \n",
+    "expected_output = 5\n",
+    "\n",
+    "\n",
+    "input = [[1, 0, 1],\n",
+    "         [0, 1, 0],\n",
+    "         [1, 1, 1]]\n",
+    "         \n",
+    "expected_output = 3\n",
+    "\"\"\"\n",
+    "# [curr -1, curr], [curr, curr - 1], [curr, curr +1], [curr + 1, curr]\n",
+    "\n",
+    "def get_adjacent_members(index)\n"
+   ]
   }
  ],
  "metadata": {
