--- a/jupyter_notebooks/numpy_lab.ipynb
+++ b/jupyter_notebooks/numpy_lab.ipynb
@@ -287,9 +287,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:3, 1 = [ 95 100  87]\n",
+      "1:, 1 = [100  87]\n",
+      "1:3, 1 = [100  87]\n",
+      "0:3, 0:1 = [[93]\n",
+      " [84]\n",
+      " [99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "grades = numpy.array([[93, 95],\n",
+    "                      [84, 100],\n",
+    "                      [99, 87]])\n",
+    "\n",
+    "# slicing\n",
+    "# This grabs the 1th index of each array in the parent array.\n",
+    "print(f'0:3, 1 = {grades[0:3, 1]}')\n",
+    "\n",
+    "# This is equivalent to grades[1:3, 1], supposedly, although there is no third index in either of these shapes.\n",
+    "# Perhaps this is a standard counting scheme. Test below.\n",
+    "# This grabs the 1th index of each array including and after the 1th array in the parent array. \n",
+    "print(f'1:, 1 = {grades[1:, 1]}')\n",
+    "\n",
+    "# Yup, this returns the same thing as the one above.\n",
+    "print(f'1:3, 1 = {grades[1:3, 1]}')\n",
+    "\n",
+    "# Equivalent to grades[0:3, 0:1]\n",
+    "# This gets all of the values at the 0th index of each array.\n",
+    "print(f'0:3, 0:1 = {grades[:, :1]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
